<resources>
    <string name="app_name">BeeFound</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_description">A community effort to guide lost swarms back to their keepers</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="regular_user">Regular User</string>
    <string name="beekeeper">Beekeeper</string>
    <string name="email_address_optional">Email Address (optional)</string>
    <string name="phone_number_optional">Phone Number (optional)</string>
    <string name="log_in_underlined"><u>Log In</u></string>
    <string name="sign_up_underlined"><u>Sign Up</u></string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="back">back</string>
    <string name="logout">Logout</string>
    <string name="hives">Hives</string>
    <string name="picture_of_header">picture of header</string>
    <string name="hivestitle">Saved Hives</string>
    <string name="add_hive">Add Hive</string>
    <string name="hive_name">New Hive Name</string>
    <string name="searchedHives_text">Searched Hives</string>
</resources>