<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">


  <ImageView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:src="@drawable/bee4"
      android:scaleType="centerCrop" />


  <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text= "@string/app_name"
      android:textColor= "@color/white"
      android:textSize="50sp"
      android:fontFamily="sans-serif"
      android:textStyle="bold"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginTop="160dp"
      android:gravity="center"
      />


  <TextView
      android:id="@+id/text_slogan"
      android:layout_width="250dp"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:textSize="16sp"
      android:textStyle="bold"
      android:text="@string/app_description"
      app:layout_constraintTop_toBottomOf="@id/title"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:textColor= "@color/gray_m"


      />


  <Button
      android:id="@+id/signUpButton"
      android:layout_width="220dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="60sp"
      android:backgroundTint="@color/white"
      android:background= "@drawable/button_rounded_corners"
      android:text="@string/sign_up"
      android:textColor="@color/black"
      android:textColorHighlight="#FFDC60"
      android:textColorLink="#CFB117"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/text_slogan"
      android:textAllCaps="false"/>

  <Button
      android:id="@+id/logInButton"
      android:layout_width="220dp"
      android:layout_height="wrap_content"
      android:text="@string/log_in"
      android:background= "@drawable/button_rounded_corners"
      app:layout_constraintTop_toBottomOf="@id/signUpButton"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginTop="15dp"
      android:backgroundTint="@color/yellow_m"
      android:textColor= "@color/black"
      android:textStyle="bold"
      android:textAllCaps="false"
      />


</androidx.constraintlayout.widget.ConstraintLayout>